# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_test.txt  maze_output.txt  pyproject.toml  requirements.txt  setup.py  test_stage1.py  test_stage2.py
Notes/: .~lock.notes.odt#  Notes.odt  TODO.md  notes.odt
mazegen/: __init__  __init__.py  cell.py  colors.py  config.py  generator.py
tests/: test_maze.py
