[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A 42 curriculum maze generator package."
authors = [
    { name = "dporhomo" },
    { name = "amanukho" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0"
]

[project.scripts]
a_maze_ing = "a_maze_ing:main"

[tool.setuptools]
packages = ["mazegen"]
py-modules = ["a_maze_ing"]
